fixed lines behind logo and flags wraper

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -179,7 +179,7 @@ ul {
       height: 300px;
       background-color: rgba(204, 204, 204, .5);
       position: absolute;
-      top: -50%;
+      top: -42%;
       left: 50%;
       z-index: -2;
     }
@@ -244,10 +244,10 @@ ul {
           content: "";
           display: inline-block;
           width: 5px;
-          height: 120px;
+          height: 150px;
           background-color: rgba(204, 204, 204, .5);
           position: absolute;
-          top: -120%;
+          top: -150%;
           left: 50%;
           transform: translate(-50%, -20%);
           z-index: 0;
@@ -349,10 +349,13 @@ ul {
       max-width: 16px;
       max-height: 16px;
       overflow: hidden;
+      border-radius: 50%;
     }
 
     &__flag {
       width: 100%;
+      transform-origin: 50% 50%;
+      transform: scale(1.4);
     }
 
     &__name {
